<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie Keeper</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="action_settings">Settings</string>
    <string name="add_string">Add</string>
    <string name="find_string">Find</string>
    <string name="delete_string">Delete</string>
    <string name="titleHint">Movie Title</string>
    <string name="yearHint">Release Year</string>
    <string name="genreHint">Movie Genre</string>
    <string name="action_search">Search</string>

</resources>
