<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.saphiric.moviekeeper.MainMenu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/productID"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/movieTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/productID"
        android:hint="@string/titleHint"/>

    <EditText
        android:id="@+id/movieReleaseYear"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/movieTitle"
        android:hint="@string/yearHint"/>

    <EditText
        android:id="@+id/movieGenre"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/movieReleaseYear"
        android:hint="@string/genreHint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_string"
            android:id="@+id/button"
            android:onClick="newMovie" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/find_string"
            android:id="@+id/button2"
            android:onClick="lookupMovie" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_string"
            android:id="@+id/button3"
            android:onClick="removeMovie" />
    </LinearLayout>

</LinearLayout>
